@@ -1,8 +1,12 @@
+2021-01-10  Dirk Eddelbuettel  <edd@debian.org>
+
+        * .github/workflows/ci.yaml: Add CI runner using r-ci
+
 2020-04-27  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Add 'last commit' badge
 
-	* configure: Change shebanh to #!/bin/sh
+	* configure: Change shebang to #!/bin/sh
 
 2018-12-23  Dirk Eddelbuettel  <edd@debian.org>
 
